Added types for payment endpoints

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "swagger": "npx openapi-typescript https://dev.stretch.com/api/v1/admin/apidoc.json -o ./types/admin.d.ts && npx openapi-typescript https://dev.stretch.com/api/v1/auth/apidoc.json -o ./types/auth.d.ts && npx openapi-typescript https://dev.stretch.com/api/v1/chat/apidoc.json -o ./types/chat.d.ts && npx openapi-typescript https://dev.stretch.com/api/v1/coach/apidoc.json -o ./types/coach.d.ts && npx openapi-typescript https://dev.stretch.com/api/v1/nav/apidoc.json -o ./types/nav.d.ts && npx openapi-typescript https://dev.stretch.com/api/v1/notification/apidoc.json -o ./types/notification.d.ts && npx openapi-typescript https://dev.stretch.com/api/v1/payment/apidoc.json -o ./types/payment.d.ts && npx openapi-typescript https://dev.stretch.com/api/v1/storage/apidoc.json -o ./types/storage.d.ts"
+    "build-swagger": "npx openapi-typescript https://dev.stretch.com/api/v1/admin/apidoc.json -o ./types/admin.d.ts && npx openapi-typescript https://dev.stretch.com/api/v1/auth/apidoc.json -o ./types/auth.d.ts && npx openapi-typescript https://dev.stretch.com/api/v1/chat/apidoc.json -o ./types/chat.d.ts && npx openapi-typescript https://dev.stretch.com/api/v1/coach/apidoc.json -o ./types/coach.d.ts && npx openapi-typescript https://dev.stretch.com/api/v1/nav/apidoc.json -o ./types/nav.d.ts && npx openapi-typescript https://dev.stretch.com/api/v1/notification/apidoc.json -o ./types/notification.d.ts && npx openapi-typescript https://dev.stretch.com/api/v1/payment/apidoc.json -o ./types/payment.d.ts && npx openapi-typescript https://dev.stretch.com/api/v1/storage/apidoc.json -o ./types/storage.d.ts"
   },
   "repository": {
     "type": "git",
