--- a/package.json
+++ b/package.json
@@ -24,5 +24,13 @@
   "bugs": {
     "url": "https://github.com/Stretch-com/api-sdk-javascript/issues"
   },
-  "homepage": "https://github.com/Stretch-com/api-sdk-javascript#readme"
+  "homepage": "https://github.com/Stretch-com/api-sdk-javascript#readme",
+  "devDependencies": {
+    "@eslint/compat": "^1.0.1",
+    "@eslint/js": "^9.3.0",
+    "eslint": "^9.3.0",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.3.0",
+    "typescript-eslint": "^7.10.0"
+  }
 }
